WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
225101
Rotation axis parallel to the z axis should not serialize using the "z" keyword for the rotate property
https://bugs.webkit.org/show_bug.cgi?id=225101
Summary
Rotation axis parallel to the z axis should not serialize using the "z" keywo...
Antoine Quint
Reported
2021-04-27 06:30:53 PDT
Rotation axis parallel to the z axis should not serialize using the "z" keyword for the rotate property
Attachments
Patch
(15.29 KB, patch)
2021-04-27 06:32 PDT
,
Antoine Quint
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antoine Quint
Comment 1
2021-04-27 06:32:49 PDT
Created
attachment 427143
[details]
Patch
EWS Watchlist
Comment 2
2021-04-27 06:33:58 PDT
This patch modifies the imported WPT tests. Please ensure that any changes on the tests (not coming from a WPT import) are exported to WPT. Please see
https://trac.webkit.org/wiki/WPTExportProcess
Antoine Quint
Comment 3
2021-04-27 06:34:19 PDT
The matching WPT pull request is
https://github.com/web-platform-tests/wpt/pull/28712
.
EWS
Comment 4
2021-04-29 06:43:42 PDT
Committed
r276768
(
237155@main
): <
https://commits.webkit.org/237155@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 427143
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug