Rotation axis parallel to the z axis should not serialize using the "z" keyword for the rotate property https://bugs.webkit.org/show_bug.cgi?id=225101

Reviewed by Antti Koivisto.

LayoutTests/imported/w3c:

Update the tests per https://github.com/web-platform-tests/wpt/pull/28712 as well as their expectations.

* web-platform-tests/css/css-transforms/animation/rotate-composition-expected.txt:
* web-platform-tests/css/css-transforms/animation/rotate-interpolation-expected.txt:
* web-platform-tests/css/css-transforms/animation/rotate-interpolation.html:
* web-platform-tests/css/css-transforms/parsing/rotate-parsing-valid-expected.txt:
* web-platform-tests/css/css-transforms/parsing/rotate-parsing-valid.html:

Source/WebCore:

The CSS spec has changed to drop the "z" keyword or any other axis parallel to the z axis when parsing the
rotate property in https://github.com/w3c/csswg-drafts/pull/6147.

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::computedRotate):
* css/parser/CSSPropertyParser.cpp:
(WebCore::consumeRotate):


Canonical link: https://commits.webkit.org/237155@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@276768 268f45cc-cd09-0410-ab3c-d52691b4dbfc